--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script defer src="key.js"></script>
     <script defer src="index.js"></script>
 
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Movie Guide App</title>
 </head>
 
 <body>
 
+    <div class="container">
+        <div class="search-container">
+            <input type="text" id="movie-name" placeholder="Enter movie name here..." value="">
+            <button id="search-btn">Search</button>
+        </div>
+        <div id="result"></div>
+    </div>
 
 </body>
 
